Fixed incident button bar spacing / wrapping. Loading several init API calls simultaneously.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -228,11 +228,16 @@ header {
   color: red;
 }
 
-.menuContainer {
+.incidentButtonBar {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
   margin-top: 1em;
+
+  > * {
+    margin: .25em 0;
+    flex-shrink: 0;
+  }
 }
 
 .disabledIcon {
